// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > extractChangelog > repo1 pkg-b是私有包，不收集日志 1`] = `
{
  "pkg-a": [
    "feat(Button): New Component",
    "feat(Hook): add renderNodeJSX",
  ],
  "pkg-c": [
    "feat(Button): New Component",
  ],
}
`;

exports[`utils > extractChangelog > repo2 无私有包 1`] = `
{
  "pkg-a": [
    "feat(Button): New Component",
    "feat(Hook): add renderNodeJSX",
  ],
  "pkg-b": [
    "chore(utils): add \`isString\` function",
  ],
  "pkg-c": [
    "feat(Button): New Component",
  ],
}
`;

exports[`utils > stashPullRequestChangelog 1`] = `
"---
pr_number:6
contributor:liweijie0812
---

# Changelog

- feat(Button): New Component
- feat(Hook): add renderNodeJSX
"
`;

exports[`utils > stashPullRequestChangelog 2`] = `
"---
pr_number:6
contributor:liweijie0812
---

# Changelog

- chore(utils): add \`isString\` function
"
`;

exports[`utils > stashPullRequestChangelog 3`] = `
"---
pr_number:6
contributor:liweijie0812
---

# Changelog

- feat(Button): New Component
"
`;
